Minecraft Server: generate draft bot implementation with LLM