@@ -7,7 +7,8 @@ import org.github.akarkin1.dispatcher.response.EmptyResponse;
 import org.github.akarkin1.ecs.RunTaskStatus;
 import org.github.akarkin1.ecs.TaskInfo;
 import org.github.akarkin1.message.MessageConsumer;
-import org.github.akarkin1.tailscale.TailscaleNodeService;
+import org.github.akarkin1.service.NodeService;
+import org.github.akarkin1.service.ServiceType;
 import org.github.akarkin1.tg.TgRequestContext;
 
 import java.util.List;
@@ -17,37 +18,49 @@ import java.util.Optional;
 @RequiredArgsConstructor
 public final class RunNodeCommand implements BotCommand<EmptyResponse> {
 
-  private final TailscaleNodeService tailscaleNodeService;
+  private final NodeService nodeService;
   private final MessageConsumer messageConsumer;
 
   @Override
   public EmptyResponse run(List<String> args) {
-    if (args.isEmpty()) {
+    if (args.size() < 2) {
       messageConsumer.accept(
-        "${command.run-node.missing-arg.region.error}. ${common.command.description.message}: "
+        "${command.run-node.missing-arg.error}. ${common.command.description.message}: "
         + getDescription());
       return EmptyResponse.NONE;
     }
 
-    String userRegion = args.getFirst();
+    // First argument is the service type
+    String serviceTypeStr = args.get(0);
+    ServiceType serviceType;
+    try {
+      serviceType = ServiceType.valueOf(serviceTypeStr.toUpperCase());
+    } catch (IllegalArgumentException e) {
+      messageConsumer.accept("${command.run-node.invalid-service-type.error}", serviceTypeStr);
+      return EmptyResponse.NONE;
+    }
 
-    if (!tailscaleNodeService.isRegionValid(userRegion)) {
+    // Second argument is the region
+    String userRegion = args.get(1);
+
+    if (!nodeService.isRegionValid(userRegion)) {
       messageConsumer.accept(
         "${common.region.invalid-name.error}",
         userRegion);
       return EmptyResponse.NONE;
     }
 
-    if (!tailscaleNodeService.isRegionSupported(userRegion)) {
+    if (!nodeService.isRegionSupported(userRegion)) {
       messageConsumer.accept("${common.region.not-supported.error}",
                              userRegion);
       return EmptyResponse.NONE;
     }
 
+    // Optional third argument is the hostname
     String userHost = null;
-    if (args.size() > 1) {
-      userHost = args.get(1);
-      if (!tailscaleNodeService.isHostnameAvailable(userRegion, userHost)) {
+    if (args.size() > 2) {
+      userHost = args.get(2);
+      if (!nodeService.isHostnameAvailable(userRegion, userHost)) {
         messageConsumer.accept(
           "${command.run-node.node.name-is-incorrect-or-in-use.error}",
           userHost);
@@ -55,24 +68,26 @@ public final class RunNodeCommand implements BotCommand<EmptyResponse> {
       }
     }
 
-    messageConsumer.accept("${command.run-node.node.running.message}");
-    TaskInfo taskInfo = tailscaleNodeService.runNode(userRegion,
-                                                     TgRequestContext.getUsername(),
-                                                     userHost);
+    messageConsumer.accept("${command.run-node.node.running.message}", serviceType.getDisplayName());
+    TaskInfo taskInfo = nodeService.runNode(userRegion,
+                                           TgRequestContext.getUsername(),
+                                           userHost,
+                                           serviceType);
     log.debug("Task is run, task info: {}", taskInfo);
     messageConsumer.accept("${command.run-node.task.started.message}");
-    RunTaskStatus runTaskStatus = tailscaleNodeService.checkNodeStatus(taskInfo);
+    RunTaskStatus runTaskStatus = nodeService.checkNodeStatus(taskInfo);
     if (RunTaskStatus.UNKNOWN.equals(runTaskStatus)) {
       messageConsumer.accept("${command.run-node.status.check-failed.error}");
     } else if (RunTaskStatus.UNHEALTHY.equals(runTaskStatus)) {
       messageConsumer.accept("${command.run-node.node.start-failed.error}");
     } else {
-      Optional<TaskInfo> fullTaskInfo = tailscaleNodeService.getFullTaskInfo(taskInfo.getRegion(),
-                                                                             taskInfo.getCluster(),
-                                                                             taskInfo.getId());
+      Optional<TaskInfo> fullTaskInfo = nodeService.getFullTaskInfo(taskInfo.getRegion(),
+                                                                   taskInfo.getCluster(),
+                                                                   taskInfo.getId());
       StringBuilder successMessage = new StringBuilder("${command.run-node.node.start-succeed.message}");
       fullTaskInfo.ifPresent(fullInfoLocal -> successMessage.append(" ${common.node.details.message}:\n")
         .append("\t- ${common.node.name.message}: %s%n".formatted(fullInfoLocal.getHostName()))
+        .append("\t\t${common.node.type.message}: %s%n".formatted(fullInfoLocal.getServiceType().getDisplayName()))
         .append("\t\t${common.node.status.message}: %s%n".formatted(fullInfoLocal.getState()))
         .append("\t\t${common.node.public-ip.message}: %s%n".formatted(fullInfoLocal.getPublicIp()))
         .append("\t\t${common.node.location.message}: %s (%s)".formatted(fullInfoLocal.getLocation(),
